<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/Nombre"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        android:hint="@string/hint_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/Codigo"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_codigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Edad" />

    <EditText
        android:id="@+id/Edad"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombre" />

    <TextView
        android:id="@+id/Lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtListar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnDelete"
        app:layout_constraintStart_toEndOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/btnRead" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnInsert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Codigo" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnRead"
        app:layout_constraintStart_toEndOf="@+id/btnInsert"
        app:layout_constraintTop_toBottomOf="@+id/Codigo" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsert" />


</androidx.constraintlayout.widget.ConstraintLayout>
